force-app/main/default/objects/Agent_Language_Skill__c/Agent_Language_Skill__c.object-meta.xml
<CustomObject>
    <description>Tracks language skills and proficiency levels for service agents to enable intelligent case routing</description>
    <label>Agent Language Skill</label>
    <nameField>
        <label>Skill Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent Language Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>