force-app/main/default/objects/Agent_Language_Skill__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if this language skill is currently active for case routing</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>