force-app/main/default/objects/Agent_Language_Skill__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>The language the agent can support</description>
    <label>Language</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Dutch</fullName>
            </value>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Arabic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>