force-app/main/default/objects/Agent_Language_Skill__c/fields/Primary_Language__c.field-meta.xml
<CustomField>
    <fullName>Primary_Language__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this is the agent's primary/native language for priority routing</description>
    <label>Primary Language</label>
    <type>Checkbox</type>
</CustomField>