force-app/main/default/objects/Agent_Language_Skill__c/fields/Proficiency_Level__c.field-meta.xml
<CustomField>
    <fullName>Proficiency_Level__c</fullName>
    <description>Agent proficiency level in this language - used for routing prioritization</description>
    <label>Proficiency Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Native</fullName>
            </value>
            <value>
                <fullName>Fluent</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
                <default>true</default>
                <label>Professional</label>
            </value>
            <value>
                <fullName>Conversational</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>